# ai-resume-optimizer

./: .gitignore  AUTH_PROGRESS.md  CENTRALIZED_SSL_GUIDE.md  DEPLOYMENT_REPORT.md  SSL-DISTRIBUTION-GUIDE.md  auto-sync-certs.sh  centralized-ssl-setup.sh  deploy.sh  distribute-certs-to-slaves.sh  distribute-certs.sh  enable-https.sh  letsencrypt-setup.sh  nginx-https.conf  nginx.conf  setup-auto-sync.sh  setup-ssl.sh  sync-cert.sh  sync-certs-from-main.sh
.git-rewrite/: backup-refs  commit  index  parse  revs
.git-rewrite/t/: README.md
.git-rewrite/t/backend/src/: main.rs
.git-rewrite/t/backend/src/models/: mod.rs
.git-rewrite/t/backend/src/routes/: mod.rs
.git-rewrite/t/backend/src/services/: mod.rs
backend/: .env  Cargo.toml  INTEGRATION_NOTES.txt
backend/migrations/: 001_create_users.sql
backend/src/: main.rs  main_integration_example.rs  main_with_auth.rs
backend/src/middleware/: usage.rs
backend/src/models/: mod.rs  resume.rs  user.rs
backend/src/routes/: auth.rs  mod.rs  resume.rs  usage.rs
backend/src/services/: resume.rs
backend/src/utils/: auth.rs  mod.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AuthForm.tsx  CoverLetterGenerator.tsx  KeywordRecommendations.tsx  ResumeGenerator.tsx  ResumeOptimizer.tsx  ResumeScorer.tsx  UsageStats.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/utils/: api.ts
