[package]
name = "ai_resume_optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Authentication & Security
jsonwebtoken = "9"
argon2 = "0.5"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Async traits
async-trait = "0.1"

# Tracing & Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1"
thiserror = "1"
